tests(userService): Implement full CRUD and add tests
This commit introduces the remaining methods required for full CRUD functionality.

Additionally, corresponding unit tests have been created for the new methods.