@@ -1,21 +1,25 @@
 package dev.senna.service;
 
 import dev.senna.controller.dto.request.CreateUserRequest;
+import dev.senna.controller.dto.request.UpdateUserDto;
 import dev.senna.exception.UserAlreadyExists;
-import dev.senna.model.entity.ItemEntity;
+import dev.senna.exception.UserNotFoundException;
 import dev.senna.model.entity.UserEntity;
 import dev.senna.model.enums.UserRole;
 import dev.senna.repository.UserRepository;
 import io.quarkus.elytron.security.common.BcryptUtil;
 import io.quarkus.hibernate.orm.panache.PanacheQuery;
+import io.quarkus.panache.common.Page;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,96 +29,183 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
-    @InjectMocks
-    private UserService userService;
-
     @Mock
     private UserRepository userRepository;
 
-    @Mock
-    private PanacheQuery<UserEntity> panacheMock;
-
-    @Captor
-    private ArgumentCaptor<UserEntity> userCaptor;
+    @InjectMocks
+    private UserService userService;
 
     @Nested
     @DisplayName("createUser() tests")
-    class createUser {
+    class createUserTest {
 
         @Test
-        @DisplayName("Should create an user successfully")
-        void shouldCreateAnUserSuccessfully() {
+        @DisplayName("Should create a user when the username does not exists")
+        void testCreateUser() {
+            when(userRepository.existsByUsername(anyString())).thenReturn(false);
 
-            // Arrange
-            var createUserRequest = new CreateUserRequest("USERNAME", "PASSWORD");
-            var idGenerated = UUID.randomUUID();
-            when(userRepository.existsByUsername("USERNAME")).thenReturn(false);
-
-            doAnswer(invocationOnMock -> {
-                UserEntity user = invocationOnMock.getArgument(0);
-                user.setUserId(idGenerated);
+            doAnswer(invocation -> {
+                UserEntity userEntity = invocation.getArgument(0);
+                userEntity.setUserId(UUID.randomUUID());
                 return null;
             }).when(userRepository).persist(any(UserEntity.class));
 
-            // Act
-            var clientId = userService.createUser(createUserRequest);
+            var userRequest = new CreateUserRequest("USER_NAME", "PASSWORD");
+            var userId = userService.createUser(userRequest);
 
-            // Assert
-            verify(userRepository, times(1)).persist(userCaptor.capture());
-            var persistedUser = userCaptor.getValue();
-
-            assertNotNull(clientId);
-            assertEquals(idGenerated, clientId);
-            assertEquals(createUserRequest.username(), persistedUser.getUsername());
-
-            assertNotEquals(createUserRequest.password(), persistedUser.getPassword());
-            assertTrue(BcryptUtil.matches(createUserRequest.password(), persistedUser.getPassword()));
+            assertNotNull(userId);
+            verify(userRepository).persist(any(UserEntity.class));
         }
 
         @Test
-        @DisplayName("Should throw UserAlreadyExists when username already exists on database")
-        void shouldThrowUserAlreadyExistsWhenUsernameAlreadyExists() {
+        @DisplayName("Should throw an exception when the username already exists")
+        void testCreateUser_whenUserAlreadyExists() {
+            when(userRepository.existsByUsername(anyString())).thenReturn(true);
+            var userRequest = new CreateUserRequest("testuser", "password");
 
-            // Arrange
-            var reqDto = new CreateUserRequest("USERNAME", "PASSWORD");
-            when(userRepository.existsByUsername(reqDto.username())).thenReturn(true);
-
-            // Act and Assert
-            var exception = assertThrows(UserAlreadyExists.class, () -> {
-                userService.createUser(reqDto);
-            });
-
-            assertEquals("User with username " + reqDto.username() + " already exists in the system", exception.getDetail());
-            verify(userRepository, times(1)).existsByUsername(reqDto.username());
-            verify(userRepository, never()).persist(any(UserEntity.class));
+            assertThrows(UserAlreadyExists.class, () -> userService.createUser(userRequest));
         }
     }
 
     @Nested
     @DisplayName("findAll() tests")
-    class findAll {
+    class findAllTest {
 
         @Test
-        @DisplayName("Should return a list with all users in the system")
-        void shouldReturnAListWithAllUsers() {
+        @DisplayName("Should return a list of users")
+        void testFindAll() {
 
-            // Arrange
-            var user1 = new UserEntity(UUID.randomUUID(), "USERNAME", "PASSWORD", UserRole.OFFICER);
-            var user2 = new UserEntity(UUID.randomUUID(), "USERNAME_2", "PASSWORD_2", UserRole.OFFICER);
+            var user = new UserEntity();
+            user.setUsername("USERNAME");
+            user.setRole(UserRole.OFFICER);
 
-            when(userRepository.findAll()).thenReturn(panacheMock);
-            when(panacheMock.page(0, 10)).thenReturn(panacheMock);
-            when(panacheMock.list()).thenReturn(List.of(user1, user2));
+            var mockQuery = mock(PanacheQuery.class);
 
-            // Act
-            var resultList = userService.findAll(0, 10);
+            when(mockQuery.page(anyInt(), anyInt())).thenReturn(mockQuery);
+            when(mockQuery.list()).thenReturn(Collections.singletonList(user));
+            when(userRepository.findAll()).thenReturn(mockQuery);
 
-            // Assert
-            assertEquals(2, resultList.size());
-            assertEquals(user1.getUsername(), resultList.getFirst().userName());
-            assertEquals(user2.getUsername(), resultList.getLast().userName());
-            assertEquals(user1.getRole().getRoleName(), resultList.getFirst().role());
-            assertEquals(user2.getRole().getRoleName(), resultList.getLast().role());
+            var users = userService.findAll(0, 10);
+
+            assertFalse(users.isEmpty());
+            assertEquals("USERNAME", users.get(0).userName());
         }
     }
+
+    @Nested
+    @DisplayName("findUserById() tests")
+    class findUserByIdTest {
+
+        @Test
+        @DisplayName("Should return an user matching by id")
+        void shouldReturnAnUserById() {
+
+            var userId = UUID.randomUUID();
+            var user = new UserEntity();
+
+            user.setUserId(userId);
+            user.setUsername("USERNAME");
+            user.setRole(UserRole.OFFICER);
+
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.of(user));
+
+            var userResponse = userService.findUserById(userId);
+
+            assertNotNull(userResponse);
+            assertEquals("USERNAME", userResponse.username());
+            verify(userRepository).findByIdOptional(userId);
+        }
+
+        @Test
+        @DisplayName("Should throw an exception when the user is not found by id")
+        void testFindUserById_whenUserNotFound() {
+            var userId = UUID.randomUUID();
+
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.empty());
+
+            var exception = assertThrows(UserNotFoundException.class, () -> userService.findUserById(userId));
+
+            verify(userRepository).findByIdOptional(userId);
+            assertEquals("User not found on the system! UserID : " + userId, exception.getDetail());
+        }
+    }
+
+    @Nested
+    @DisplayName("updateUser() tests")
+    class updateUserTest {
+
+        @Test
+        @DisplayName("Should update an user successfully")
+        void testUpdateUser() {
+
+            var userId = UUID.randomUUID();
+            var user = new UserEntity();
+
+            user.setUserId(userId);
+            user.setUsername("USERNAME");
+            user.setPassword("PASSWD");
+            user.setRole(UserRole.OFFICER);
+
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.of(user));
+
+            var updateUserDto = new UpdateUserDto("UPDATE_NAME", "UPDATE_PASSWD", "ADMIN");
+            var updatedUser = userService.updateUser(userId, updateUserDto);
+
+            assertNotNull(updatedUser);
+            assertEquals(updateUserDto.username(), updatedUser.username());
+            assertTrue(BcryptUtil.matches(updateUserDto.password(), updatedUser.password()));
+            verify(userRepository).persist(any(UserEntity.class));
+        }
+
+        @Test
+        @DisplayName("Should throw an exception when the user is not found by id")
+        void testUpdateUser_whenUserNotFound() {
+
+            var userId = UUID.randomUUID();
+
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.empty());
+
+            var updateUserDto = new UpdateUserDto("UPDATE_NAME", "UPDATE_PASSWD", "ADMIN");
+
+            var exception =  assertThrows(UserNotFoundException.class, () -> userService.updateUser(userId, updateUserDto));
+
+            assertEquals("User not found on the system! UserID : " + userId, exception.getDetail());
+            verify(userRepository).findByIdOptional(userId);
+            verify(userRepository, never()).persist(any(UserEntity.class));
+        }
+    }
+
+    @Nested
+    @DisplayName("deleteUser() tests")
+    class deleteUserTest {
+
+        @Test
+        @DisplayName("Should delete an user successfully bi his id")
+        void shouldDeleteAnUserSuccessfully() {
+
+            var userId = UUID.randomUUID();
+            var user = new UserEntity();
+            user.setUserId(userId);
+
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.of(user));
+            when(userRepository.deleteById(any(UUID.class))).thenReturn(true);
+
+            userService.deleteUser(userId);
+
+            verify(userRepository).deleteById(userId);
+        }
+
+        @Test
+        @DisplayName("Should throw an exception when the user is not found by id")
+        void testDeleteUser_whenUserNotFound() {
+            var userId = UUID.randomUUID();
+            when(userRepository.findByIdOptional(userId)).thenReturn(Optional.empty());
+
+            assertThrows(UserNotFoundException.class, () -> userService.deleteUser(userId));
+        }
+    }
+
+
+
+
 }
